# LLean

./: .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  TODO.md  hello.py  out.txt  pyproject.toml  run_tests.sh  setup.sh
llean/: __init__.py  levels.py  search.py  tactic_models.py  utils.py
scripts/: Tutorial_L01.py  Tutorial_L01_from_file.py  Tutotiral_L01.py  exhaustive_tutorial_search.py  getting_help.py  list_level_solutions.py  list_level_tactics.py  list_used_tactics.py  show_level_tactics.py  trace_tutorial_L03.py  trace_tutorial_L08.py  verify_tutorial_tactics.py
tests/: conftest.py  test_tactic_models.py  test_utils.py
