[project]
name = "llean"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "lean-interact>=0.8.2",
    "python-dotenv>=1.1.1",
    "pydantic>=2.7.0",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "pytest>=8.2.0",
]
